# dmrg

./: .gitignore  CODE_ANALYSIS.md  DEBUGGING_REPORT.md  LICENSE.txt  README.md  compare_tensor_contractions.py  pyproject.toml
.github/: copilot-instructions.md
dev/: STRUCTURAL_CHANGES.md  dev.ipynb  dmrg  param.txt  test.txt
dev/OUT_0.5/: S.txt  X.txt  ZZcorr.txt
dev/OUT_2/: S.txt  X.txt  ZZcorr.txt
examples/: TFIM.py  TFIM_example.ipynb  TFIM_guide.ipynb  TFIM_new.py
src/dmrg/: CONT.py  MPO.py  MPS.py  MPS_optimized.py  OptimizedTensorContractor.py  __about__.py  __init__.py  cont.py  dmrg.py  lanczos.py  logging.py  obs.py
