[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmrg"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "pietrorichelli", email = "richelli.pietro@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["numpy","scipy"]

[project.urls]
Documentation = "https://github.com/pietrorichelli/dmrg#readme"
Issues = "https://github.com/pietrorichelli/dmrg/issues"
Source = "https://github.com/pietrorichelli/dmrg"

[tool.hatch.version]
path = "src/dmrg/__about__.py"

